--- a/app/lib/styles/app.css
+++ b/app/lib/styles/app.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "tailwindcss-react-aria-components" { prefix: rac }
 
 @custom-variant dark (&:where(.dark, .dark *));
 
