--- a/app/lib/styles/app.css
+++ b/app/lib/styles/app.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
-@plugin "tailwindcss-react-aria-components" { prefix: rac }
+@plugin "tailwindcss-react-aria-components" {
+	prefix: rac;
+}
 
 @custom-variant dark (&:where(.dark, .dark *));
 
