Working on articles page.

--- a/app/lib/styles/app.css
+++ b/app/lib/styles/app.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+@plugin "@tailwindcss/typography";
 @custom-variant dark (&:where(.dark, .dark *));
 
 /* FONTS */
@@ -272,4 +273,46 @@ h6 {
 /* More info here: https://www.youtube.com/watch?v=soFSSkf4oVY */
 span.touch-target {
 	@apply size-12 absolute top-1/2 left-1/2 -translate-1/2 [@media(pointer:fine)]:hidden;
+}
+
+.fluid-base {
+	font-size: 1rem;
+	line-height: var(--fluid-line-height);
+	letter-spacing: var(--fluid-letter-spacing);
+	--fluid-line-height: 1.4;
+	--fluid-letter-spacing: 0.5px
+}
+
+.fluid-lg {
+	font-size: clamp(1.2rem,calc(.133vw + 1.1734rem),1.333rem);
+	--fluid-line-height: 1.2;
+	--fluid-letter-spacing: 0.009375em
+}
+
+.fluid-lg,.fluid-xl {
+	letter-spacing: var(--fluid-letter-spacing);
+	line-height: var(--fluid-line-height)
+}
+
+.fluid-xl {
+	font-size: clamp(1.44rem,calc(.3369vw + 1.3726rem),1.7769rem);
+	--fluid-line-height: 1.2;
+	--fluid-letter-spacing: 0.0125em
+}
+
+.fluid-2xl {
+	font-size: clamp(1.728rem,calc(.6406vw + 1.5999rem),2.3686rem);
+	--fluid-line-height: 1.2;
+	--fluid-letter-spacing: normal
+}
+
+.fluid-2xl,.fluid-3xl {
+	letter-spacing: var(--fluid-letter-spacing);
+	line-height: var(--fluid-line-height)
+}
+
+.fluid-3xl {
+	font-size: clamp(2.0736rem,calc(1.0837vw + 1.8569rem),3.1573rem);
+	--fluid-line-height: 1.2;
+	--fluid-letter-spacing: 0.0073529412em
 }
