Working on styling

--- a/app/lib/styles/app.css
+++ b/app/lib/styles/app.css
@@ -235,6 +235,10 @@
 	--gradient-title-secondary: var(--color-neutral-800);
 }
 
+* {
+	/* outline: 1px solid orange; */
+}
+
 :root {
 	line-height: 1.5;
 	font-weight: 400;
