--- a/app/lib/styles/app.css
+++ b/app/lib/styles/app.css
@@ -246,6 +246,13 @@
 	--cover-min-block-size: 100vh;
 	/* CLUSTER */
 	--cluster-space: 0.25rem;
+	/* SIDEBAR */
+	--sidebar-gap: 1rem;
+	--sidebar-width: content;
+	--sidebar-content-min: 50%;
+	/* SWITCHER */
+	--switcher-gap: 0.25rem;
+	--switcher-container-width: 30rem;
 }
 
 * {
@@ -404,13 +411,47 @@ span.touch-target {
 }
 
 /* CLUSTER COMPONENT */
-
 @utility cluster {
 	display: flex;
 	flex-wrap: wrap;
 	gap: var(--cluster-space, 1rem);
 	justify-content: flex-start;
 	align-items: center;
+}
+
+/* SIDEBAR COMPONENT */
+@utility sidebar {
+	display: flex;
+	flex-wrap: wrap;
+	gap: var(--sidebar-gap);
+
+	& > :first-child {
+		flex-basis: var(--sidebar-width);
+		flex-grow: 1;
+	}
+
+	& > :last-child {
+		flex-basis: 0;
+		flex-grow: 999;
+		min-inline-size: var(--sidebar-content-min);
+	}
+}
+
+/* SWITCHER COMPONENT */
+@utility switcher {
+	display: flex;
+	flex-wrap: wrap;
+	gap: var(--switcher-gap);
+
+	& > * {
+		flex-grow: 1;
+		flex-basis: calc((var(--switcher-container-width) - 100%) * 999);
+	}
+
+	& > :nth-last-child(n + 4),
+	& > :nth-last-child(n + 4) ~ * {
+		flex-basis: 100%;
+	}
 }
 
 /* EVERY LAYOUT STYLES END */
