--- a/app/lib/styles/app.css
+++ b/app/lib/styles/app.css
@@ -261,6 +261,8 @@
 	--frame-d: 9;
 	/* IMPOSTER */
 	--imposter-margin: 0px;
+	/* ICON */
+	--icon-space: 0.25rem;
 }
 
 * {
@@ -498,6 +500,21 @@ span.touch-target {
 		overflow: auto;
 		max-inline-size: calc(100% - (var(--imposter-margin) * 2));
 		max-block-size: calc(100% - (var(--imposter-margin) * 2));
+	}
+}
+/* ICON COMPONENT */
+@utility icon {
+	width: 0.75em;
+	width: 1cap;
+	height: 0.75em;
+	height: 1cap;
+}
+@utility with-icon {
+	display: inline-flex;
+	align-items: baseline;
+
+	& .icon {
+		margin-inline-end: var(--icon-space);
 	}
 }
 
