--- a/app/lib/styles/app.css
+++ b/app/lib/styles/app.css
@@ -1,283 +1,108 @@
 @import "tailwindcss";
+@import "./fonts.css";
+@import "./theme.css";
 
 @plugin "@tailwindcss/typography";
 @custom-variant dark (&:where(.dark, .dark *));
 
-/* FONTS */
-/* Geomanist Font */
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-regular-webfont.woff2") format("woff2");
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-regular-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 400;
-	font-style: italic;
-	font-display: swap;
+/* Prevent font size inflation */
+html {
+	-moz-text-size-adjust: none;
+	-webkit-text-size-adjust: none;
+	text-size-adjust: none;
 }
 
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-thin-webfont.woff2") format("woff2");
-	font-weight: 100;
-	font-style: normal;
-	font-display: swap;
+body {
+	background: var(--background);
+	color: var(--foreground);
+	font-family: var(--font-sans);
 }
 
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-thin-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 100;
-	font-style: italic;
-	font-display: swap;
+/* Remove default margin in favour of better control in authored CSS */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+	margin-block-end: 0;
 }
 
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-extralight-webfont.woff2") format("woff2");
-	font-weight: 200;
-	font-style: normal;
-	font-display: swap;
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+	list-style: none;
 }
 
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-extralight-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 200;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-light-webfont.woff2") format("woff2");
-	font-weight: 300;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-light-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 300;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-book-webfont.woff2") format("woff2");
-	font-weight: 450;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-book-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 450;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-medium-webfont.woff2") format("woff2");
-	font-weight: 500;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-medium-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 500;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-bold-webfont.woff2") format("woff2");
-	font-weight: 700;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-bold-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 700;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-black-webfont.woff2") format("woff2");
-	font-weight: 900;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-black-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 900;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-ultra-webfont.woff2") format("woff2");
-	font-weight: 950;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Geomanist";
-	src: url("/font/Geomanist/geomanist-ultra-italic-webfont.woff2")
-		format("woff2");
-	font-weight: 950;
-	font-style: italic;
-	font-display: swap;
-}
-
-/* Biotif Font */
-@font-face {
-	font-family: "Biotif";
-	src: url("/font/Biotif/Biotif-Regular.woff2") format("woff2");
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Biotif";
-	src: url("/font/Biotif/Biotif-RegularItalic.woff2") format("woff2");
-	font-weight: 400;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Biotif";
-	src: url("/font/Biotif/Biotif-Book.woff2") format("woff2");
-	font-weight: 450;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Biotif";
-	src: url("/font/Biotif/Biotif-Book.woff2") format("woff2");
-	font-weight: 450;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Biotif";
-	src: url("/font/Biotif/Biotif-Bold.woff2") format("woff2");
-	font-weight: 700;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Biotif";
-	src: url("/font/Biotif/Biotif-Bold.woff2") format("woff2");
-	font-weight: 700;
-	font-style: italic;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Biotif";
-	src: url("/font/Biotif/Biotif-SemiBold.woff2") format("woff2");
-	font-weight: 600;
-	font-style: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: "Biotif";
-	src: url("/font/Biotif/Biotif-SemiBold.woff2") format("woff2");
-	font-weight: 600;
-	font-style: italic;
-	font-display: swap;
-}
-
-@theme {
-	--font-display: "Biotif", "sans-serif";
-	--font-sans: "Biotif", "sans-serif";
-	--font-heading: "Geomanist", "sans-serif";
-	--color-vaillant: #00917e;
-	--color-primary: #f25118;
-	--foreground: #08070b;
-	--background: #f2f2f2;
-	--gradient-title-primary: var(--color-neutral-950);
-	--gradient-title-secondary: var(--color-neutral-800);
-
-	/* STACK */
-	--space: 1.5rem;
-	/* BOX */
-	--box-padding: 1; /* defines padding multiplicator * --spacing (0.25rem) */
-	--box-border-width: 1px; /* defines width of border for box (give also units */
-	/* CENTER */
-	--center-padding: 4;
-	--center-max-width: 65ch;
-	/* COVER */
-	--cover-min-block-size: 100vh;
-	/* CLUSTER */
-	--cluster-space: 0.25rem;
-	/* SIDEBAR */
-	--sidebar-gap: 1rem;
-	--sidebar-width: content;
-	--sidebar-content-min: 50%;
-	/* SWITCHER */
-	--switcher-gap: 0.25rem;
-	--switcher-container-width: 30rem;
-	/* GRID */
-	--grid-min-width: 250px;
-	--grid-space: 1rem;
-	/* FRAME */
-	--frame-n: 16;
-	--frame-d: 9;
-	/* IMPOSTER */
-	--imposter-margin: 0px;
-	/* ICON */
-	--icon-space: 0.25rem;
-}
-
-* {
-	/* outline: 1px solid orange; */
-}
-
-:root {
+/* Set core body defaults */
+body {
+	min-height: 100vh;
 	line-height: 1.5;
-	font-weight: 400;
+	background: var(--background);
+	color: var(--foreground);
+	font-family: var(--font-sans);
+}
 
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
+/* Set shorter line heights on headings and interactive elements */
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
+	line-height: 1.1;
+}
+
+/* Balance text wrapping on headings */
+h1,
+h2,
+h3,
+h4 {
+	text-wrap: balance;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+	text-decoration-skip-ink: auto;
+	color: currentColor;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+	max-width: 100%;
+	display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+	font-family: inherit;
+	font-size: inherit;
+}
+
+/* Make sure textareas without a rows attribute are not tiny */
+textarea:not([rows]) {
+	min-height: 10em;
+}
+
+/* Anything that has been anchored to should have extra scroll margin */
+:target {
+	scroll-margin-block: 5ex;
 }
 
 .dark {
@@ -287,70 +112,11 @@
 	--gradient-title-secondary: var(--color-neutral-300);
 }
 
-body {
-	background: var(--background);
-	color: var(--foreground);
-	font-family: var(--font-sans);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-family: var(--font-heading);
-}
-
 /* Nice trick for mobile buttons to make touchable area bigger on tablets and mobile devices */
 /* Don't forget to add relative to the parent element */
 /* More info here: https://www.youtube.com/watch?v=soFSSkf4oVY */
 span.touch-target {
 	@apply size-12 absolute top-1/2 left-1/2 -translate-1/2 [@media(pointer:fine)]:hidden;
-}
-
-.fluid-base {
-	font-size: 1rem;
-	line-height: var(--fluid-line-height);
-	letter-spacing: var(--fluid-letter-spacing);
-	--fluid-line-height: 1.4;
-	--fluid-letter-spacing: 0.5px;
-}
-
-.fluid-lg {
-	font-size: clamp(1.2rem, calc(.133vw + 1.1734rem), 1.333rem);
-	--fluid-line-height: 1.2;
-	--fluid-letter-spacing: 0.009375em;
-}
-
-.fluid-lg,
-.fluid-xl {
-	letter-spacing: var(--fluid-letter-spacing);
-	line-height: var(--fluid-line-height);
-}
-
-.fluid-xl {
-	font-size: clamp(1.44rem, calc(.3369vw + 1.3726rem), 1.7769rem);
-	--fluid-line-height: 1.2;
-	--fluid-letter-spacing: 0.0125em;
-}
-
-.fluid-2xl {
-	font-size: clamp(1.728rem, calc(.6406vw + 1.5999rem), 2.3686rem);
-	--fluid-line-height: 1.2;
-	--fluid-letter-spacing: normal;
-}
-
-.fluid-2xl,
-.fluid-3xl {
-	letter-spacing: var(--fluid-letter-spacing);
-	line-height: var(--fluid-line-height);
-}
-
-.fluid-3xl {
-	font-size: clamp(2.0736rem, calc(1.0837vw + 1.8569rem), 3.1573rem);
-	--fluid-line-height: 1.2;
-	--fluid-letter-spacing: 0.0073529412em;
 }
 
 /*=== EVERY LAYOUT STYLES ===*/
