--- a/src/lib/styles/app.css
+++ b/src/lib/styles/app.css
@@ -290,6 +290,6 @@ span.touch-target {
   @apply outline-primary outline-2 outline-offset-2;
 }
 
-a:focus-visible {
-  @apply outline-primary outline-2 outline-offset-2 rounded-xs;
+a:focus {
+  @apply outline-primary outline-2 outline-offset-2;
 }
