--- a/src/lib/styles/app.css
+++ b/src/lib/styles/app.css
@@ -293,3 +293,34 @@ span.touch-target {
 a:focus-visible {
   @apply outline-primary outline-2 outline-offset-2;
 }
+
+.gridLine {
+  --color: var(--color-primary);
+  --size: 32px;
+
+  &[data-direction="vertical"] {
+    width: 1px;
+    height: 100%;
+    background: linear-gradient(
+      to bottom,
+      var(--color),
+      var(--color) 50%,
+      transparent 0,
+      transparent
+    );
+    background-size: 1px var(--size);
+  }
+
+  &[data-direction="horizontal"] {
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(
+      to right,
+      var(--color),
+      var(--color) 50%,
+      transparent 0,
+      transparent
+    );
+    background-size: var(--size) 1px;
+  }
+}
